Introduce CommandLineArgumentProviders for JVM arguments
Replace manual JVM argument building with CommandLineArgumentProviders for better management and Gradle Build Cache support. This allows consistent handling of arguments across tasks and avoids passing absolute paths, improving cacheability.

Fixes #1376